--- a/html/css/style.css
+++ b/html/css/style.css
@@ -12,3 +12,24 @@
     height: 51px;
 
 }
+.tblCalc{
+    border:2px solid gray;
+    margin:0;
+    padding:0;
+    width:250px;
+    text-align:center;
+    border-radius: 2px;
+
+}
+.tblCalc input{
+    border:1px solid deepskyblue;
+    border-style: outset;
+    width:30px;
+    margin:4px;
+    border-radius: 3px;
+}
+#btnWide{
+    width:80px;
+}
+#editWide{
+    width:250px;
